--- a/index.css
+++ b/index.css
@@ -10,3 +10,69 @@ html, body {
     width: 100%;
     height: 100%;
 }
+
+#file-modal-back {
+    display: none;
+    position: absolute;
+    top: 0; bottom: 0;
+    left: 0; right: 0;
+    background-color: rgba(0,0,0,0.2);
+}
+
+#file-modal-close {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    color: black;
+    font-size: 2em;
+    transition: .3s ease;
+}
+
+#file-modal-close:hover {
+    cursor: pointer;
+    color: orangered;
+    transform: scale(1.1);
+}
+
+#file-modal {
+    text-align: center;
+    background-color: white;
+    width: 60%;
+    margin: 25px auto;
+    padding: 25px;
+    border-radius: 5px;
+}
+
+#file-modal h3 {
+    font-size: 2em;
+    font-family: sans-serif;
+    font-weight: lighter;
+    letter-spacing: 3px;
+    margin: 0;
+    margin-top: 12.5px;
+    margin-bottom: 22.5px;
+}
+
+#file-in {
+    display: none;
+}
+
+#file-in-but {
+    margin: 0;
+    padding: 5px 12.5px;
+    border-radius: 5px;
+    border: 2px solid thistle;
+    background-color: rgba(0,0,0,0);
+    font-family: monospace;
+    font-size: 1.25em;
+    transition: .3s ease;
+}
+
+#file-in-but:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+input:focus, button:focus {
+    outline: none !important;
+}
